<resources>
    <string name="app_name">Ecommercea</string>
    <string name="rightaddress">The Right Address\nFor Shopping\nAny Day</string>
    <string name="quality">It is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="ecommercea">Ecommercea</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="do_you_have_an_account_login">Do you have an account? Login</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_the_password_reset_link_your_email">We will send you the password reset link your email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search_now">Search Now</string>
    <string name="best_deals">Best Deals</string>
    <string name="best_products">Best Products</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="s">S</string>
    <string name="scotch_premium">Scotch Premium</string>
    <string name="_2000">$2000</string>
    <string name="_1600">$1600</string>
    <string name="see_product">See product</string>
    <string name="blurrybackdesc">blurryBackDesc</string>
    <string name="ellipsedesc">ellipseDesc</string>
    <string name="textureright">textureRight</string>
    <string name="start">Start</string>
    <string name="facebooklogindesc">facebookLoginDesc</string>
    <string name="googlelogindesc">googleLoginDesc</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="chair">Chair</string>
    <string name="favoritedesc">favoriteDesc</string>
    <string name="imagebackdesc">imageBackDesc</string>
    <string name="imgproductdesc">imgProductDesc</string>
    <string name="my_cart">My Cart</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="_150">$150</string>
    <string name="total">Total</string>
    <string name="imageclosecart">imageCloseCart</string>
    <string name="check_out">Check out</string>
    <string name="imageemptyboxtexture">imageEmptyBoxTexture</string>
    <string name="imageemptybox">imageEmptyBox</string>
    <string name="l">L</string>
    <string name="contentbestdeal">contentBestDeal</string>
    <string name="contentimagecartproduct">contentImageCartProduct</string>
    <string name="contentimageplus">contentImagePlus</string>
    <string name="contentimageminus">contentImageMinus</string>
    <string name="contentimagepicked">contentImagePicked</string>
    <string name="contentimageaddressclose">contentImageAddressClose</string>
    <string name="contentimageclosebilling">contentImageCloseBilling</string>
    <string name="contentimageaddaddress">contentImageAddAddress</string>
    <string name="contenticsearch">contentIcSearch</string>
    <string name="contenticscan">contentIcScan</string>
    <string name="contenticmicrophone">contentIcMicrophone</string>
    <string name="contentimagecloseorder">contentImageCloseOrder</string>
    <string name="contentimagecloseorders">contentImageCloseOrders</string>
    <string name="contentimagecloseuseraccount">contentImageCloseUserAccount</string>
    <string name="contenticarrow">contentIcArrow</string>
    <string name="contentimagespecialrvitem">contentImageSpecialRvItem</string>
    <string name="contentimageproductdetails">contentImageProductDetails</string>
    <string name="phone">Phone</string>
    <string name="my_account">My account</string>
    <string name="forgot_change_password">Forgot/Change password</string>
    <string name="save">Save</string>
    <string name="_50">$50</string>
    <string name="_1">1</string>
    <string name="addresses">Addresses</string>
    <string name="address_location_ex_home">Address location Ex: Home</string>
    <string name="full_name">Full Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="delete">Delete</string>
    <string name="billing">Billing</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="ecommercea_does_not_support_virtual_payments_you_can_pay_when_you_receive_your_order">Ecommercea does not support virtual payments. You can pay when you receive your order.</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="place_order">Place Order</string>
    <string name="_1234567">#1234567</string>
    <string name="address">Address</string>
    <string name="products">Products</string>
    <string name="all_orders">All orders</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="coming_soon">Coming soon!</string>
</resources>