<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="0dp"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:background="@color/maroon_palette">

        <ImageView
            android:id="@+id/img_best_deal"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/contentbestdeal" />

        <TextView
            android:id="@+id/tv_deal_product_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/scotch_premium"
            app:layout_constraintStart_toEndOf="@id/img_best_deal"
            app:layout_constraintTop_toTopOf="@id/img_best_deal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_light"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/tv_old_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2000"
            app:layout_constraintTop_toBottomOf="@id/tv_deal_product_name"
            app:layout_constraintStart_toEndOf="@id/tv_new_price"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:fontFamily="@font/sf_pro_display"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/tv_new_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1600"
            app:layout_constraintStart_toStartOf="@id/tv_deal_product_name"
            app:layout_constraintTop_toBottomOf="@id/tv_deal_product_name"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:fontFamily="@font/sf_pro_display"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>